// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select isOpen={true} 1`] = `
<div>
  <div
    className="select isOpen"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options isOpen firstOptionHighlighted root isFloating"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Frankreich
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spanien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Kroatien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Vereinigten Staaten
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Österreich
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select isOpeningUpward={true} 1`] = `
<div>
  <div
    className="select openUpward"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options openUpward root openUpward isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Österreich
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Vereinigten Staaten
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Kroatien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spanien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Frankreich
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 1`] = `
<div>
  <div
    className="select"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options firstOptionHighlighted root isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Frankreich
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spanien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Kroatien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Vereinigten Staaten
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Österreich
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with an error 1`] = `
<div>
  <div
    className="select"
  >
    <div
      className="selectInput"
    >
      <div
        className="root errored"
      >
        <div
          className="error"
        >
          Please select a different option
        </div>
        <div
          className="inputWrapper"
        >
          <input
            className="input errored"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options firstOptionHighlighted root isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Frankreich
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spanien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Kroatien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Vereinigten Staaten
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Österreich
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with disabled options 1`] = `
<div>
  <div
    className="select"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options firstOptionHighlighted root isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              England
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option disabledOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spain
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option disabledOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Thailand
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              USA
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with placeholder 1`] = `
<div>
  <div
    className="select"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select your country …"
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options firstOptionHighlighted root isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Frankreich
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Spanien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Kroatien
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Vereinigten Staaten
            </span>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <span
              className="label"
            >
              Österreich
            </span>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;

exports[`Select uses render prop - optionRenderer 1`] = `
<div>
  <div
    className="select"
  >
    <div
      className="selectInput"
    >
      <div
        className="root"
      >
        
        <div
          className="inputWrapper"
        >
          <input
            className="input"
            onChange={[Function]}
            onClick={[Function]}
            readOnly={true}
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="options firstOptionHighlighted root isFloating isHidden"
      style={null}
    >
      <div
        className="bubble"
        data-bubble-container={true}
      >
        <ul
          className="ul"
        >
          <li
            aria-hidden={true}
            className="option highlightedOption"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <div>
              <span>
                German: 
                Frankreich
              </span>
              <span>
                English: 
                France
              </span>
            </div>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <div>
              <span>
                German: 
                Spanien
              </span>
              <span>
                English: 
                Spain
              </span>
            </div>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <div>
              <span>
                German: 
                Kroatien
              </span>
              <span>
                English: 
                Croatia
              </span>
            </div>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <div>
              <span>
                German: 
                Vereinigten Staaten
              </span>
              <span>
                English: 
                United States
              </span>
            </div>
          </li>
          <li
            aria-hidden={true}
            className="option"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="presentation"
          >
            <div>
              <span>
                German: 
                Österreich
              </span>
              <span>
                English: 
                Austria
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        className="arrow"
        data-bubble-arrow={true}
      />
    </div>
  </div>
</div>
`;
